kubernetes-manifests/prom-stack-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-stack-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: prometheus-grafana
      port:
        number: 80
  rules:
    - host: grafana.k8s.astakhoff.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
    - host: prometheus.k8s.astakhoff.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: new-prometheus
                port:
                  number: 9090
